--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_core: 1.17.1
   firebase_auth: 3.3.19
   cupertino_icons: ^1.0.2
+  firebase_messaging: ^11.4.1
 
 dev_dependencies:
   flutter_test:
