--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   firebase_auth: 3.3.19
   cupertino_icons: ^1.0.2
   firebase_messaging: ^11.4.1
+  sqflite: ^2.0.2
+  path: ^1.8.0
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
